# nixos

./: .drone.yml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  renovate.json  secrets.nix  status
.gitea/workflows/: commit-validation.yaml  flake.yaml
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: config.rs  main.rs  proxy.rs  scheduler.rs
darwin/jakehillion-mba-m2-15/: configuration.nix
hosts/be.lt.neb.jakehillion.me/: default.nix  hardware-configuration.nix
hosts/be.lt.ts.hillion.co.uk/: default.nix  hardware-configuration.nix
hosts/bob.lt.neb.jakehillion.me/: default.nix  wifi.env.age
lib/: mkSystem.nix
modules/: auto-updater.nix  auto_updater.nix  chia.nix  compressed_ram.nix  default.nix  defaults.nix  dns.nix  filesystems.nix  hostinfo.nix  ids.nix  impermanence.nix  kernel.nix  laptop.nix  locations.nix  ogygia.nix  qnap-display.nix  rekey.nix  resilio.nix  router.nix  sched_ext.nix  storj.nix  syncthing.nix  tailscale.nix  topology.nix  users.nix  vms.nix
pkgs/: caddy-with-dns.nix  firectl.nix  inventree.nix  llm-proxy.nix  pbcli.nix  qnaplcd.nix  renovate.nix  restic-forget.nix  storj.nix
scripts/: backups_flash_drive_sync.sh  backups_hdd_sync.sh  generate_seeds.py  update_inputs.sh  update_nixpkgs.sh
secrets/: master-key.age  secrets.nix
tests/: default.nix  generate-snapshots.nix  lib.nix  test-impermanence-basic.nix  test-impermanence-claude.nix  test-impermanence-firefox.nix  test-impermanence-mounts.nix  test-impermanence-postgres.nix  test-impermanence-tmpfiles.nix  test-impermanence-zsh.nix
(+547 files in other folders)
