[package]
name = "llm-proxy"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "matched-path"] }
bytes = "1"
etcd-client = "0.18"
futures-util = { version = "0.3", default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
